tester/testsuite/bad/bad065.jl
int main () {
  if (false) {
    return 0;
  } else {
    ;
  }
}
